# PRJ-Automate

./: .gitignore  LICENSE  PLAN.md  README.md  main.py  pyproject.toml  run_traces.py
automata/: 11.txt  12.txt  13.txt  15.txt  16.txt  17.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  44.txt  5.txt  9.txt
src/automaton/: __init__.py  complement.py  determinize.py  display.py  minimize.py  models.py  properties.py  reader.py  recognize.py  standardize.py
tests/: test_determinize.py  test_display.py  test_minimize.py  test_models.py  test_properties.py  test_reader.py  test_recognize.py  test_standardize.py
