[project]
name = "prj-automate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["rich"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # erreurs, warnings, imports mal ordonnés

[tool.pytest.ini_options]
testpaths = ["tests"]
